--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,42 @@
 <title>Open Me When</title>
 
 <style>
+.construction {
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+}
 
+.cute-box {
+    background: white;
+    padding: 25px 40px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    border: 3px dashed #f4a9c7;
+    animation: floaty 3s ease-in-out infinite;
+}
+
+.cute-box h3 {
+    margin: 0;
+    font-size: 22px;
+    color: #d45b8c;
+}
+
+.cute-box p {
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+.sparkles {
+    font-size: 20px;
+}
+
+@keyframes floaty {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-6px); }
+    100% { transform: translateY(0px); }
+}
+   box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 /* ===========================
    🌸 COLOR CUSTOMIZATION AREA
    Change these to adjust vibe
@@ -78,18 +113,19 @@ h1 {
     transform: scale(1.05);
 }
 
-/* Flap */
-.envelope::before {
+/* .envelope::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
-    background: var(--flap-color);
+    height: 70px;
+    background: linear-gradient(135deg, #f4a9c7, #ffb6d5);
     clip-path: polygon(0 0, 50% 100%, 100% 0);
-    transition: transform 0.4s ease;
+    transition: transform 0.5s ease;
     transform-origin: top;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 /* Flap opens on hover */
@@ -99,10 +135,15 @@ h1 {
 
 .envelope span {
     position: absolute;
-    top: 50%;
+    top: 18px; /* moves text into triangle */
     left: 50%;
-    transform: translate(-50%, -30%);
-    font-size: 18px;
+    transform: translateX(-50%);
+    font-size: 16px;
+    font-weight: bold;
+    z-index: 2;
+    color: white;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.2);
+    pointer-events: none;
 }
 
 /* Decoration image area inside envelope */
@@ -210,8 +251,11 @@ h1 {
 
 <!-- 🚧 CONSTRUCTION AREA -->
 <div class="construction">
-    <div class="tape"></div>
-    <div class="tape"></div>
+    <div class="cute-box">
+        <h3>💌 Coming Soon 💌</h3>
+        <p>more letters unlocking next month...</p>
+        <div class="sparkles">✨ ✨ ✨</div>
+    </div>
 </div>
 
 <p><strong>OOPS! this area is still under construction  
