--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
     50% { transform: translateY(-6px); }
     100% { transform: translateY(0px); }
 }
-   box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
+   
 /* ===========================
    🌸 COLOR CUSTOMIZATION AREA
    Change these to adjust vibe
@@ -107,13 +107,14 @@ h1 {
     border-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s ease;
+box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 }
 
 .envelope:hover {
     transform: scale(1.05);
 }
 
-/* .envelope::before {
+    .envelope::before {
     content: "";
     position: absolute;
     top: 0;
@@ -167,36 +168,6 @@ h1 {
     margin-top: 40px;
 }
 
-/* CONSTRUCTION TAPE */
-
-.construction {
-    margin-top: 60px;
-    position: relative;
-    height: 150px;
-}
-
-.tape {
-    position: absolute;
-    width: 100%;
-    height: 30px;
-    background: repeating-linear-gradient(
-        45deg,
-        yellow,
-        yellow 20px,
-        black 20px,
-        black 40px
-    );
-}
-
-.tape:first-child {
-    transform: rotate(20deg);
-    top: 40px;
-}
-
-.tape:last-child {
-    transform: rotate(-20deg);
-    top: 40px;
-}
 
 </style>
 </head>
@@ -253,13 +224,12 @@ h1 {
 <div class="construction">
     <div class="cute-box">
         <h3>💌 Coming Soon 💌</h3>
-        <p>more letters unlocking next month...</p>
-        <div class="sparkles">✨ ✨ ✨</div>
+        <p> OOPS! more letters unlocking next month...</p>
+        <div class="sparkles">🌷🌷🌷</div>
     </div>
 </div>
 
-<p><strong>OOPS! this area is still under construction  
-come back for our next monthversary 😁😁</strong></p>
+
 
 </div>
 
