--- a/index.htm
+++ b/index.htm
@@ -3,13 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div id="mainContent" style="display:none;">
-
-<div class="page-container">
 
  <title>Open Me When</title>
 
 <style>
+.secret {
+    background: #e7b6ff;
+    box-shadow: 0 8px 25px rgba(180, 120, 255, 0.4);
+    animation: shake 3s infinite;
+}
+
+@keyframes shake {
+    0% { transform: rotate(0deg); }
+    2% { transform: rotate(2deg); }
+    4% { transform: rotate(-2deg); }
+    6% { transform: rotate(2deg); }
+    8% { transform: rotate(0deg); }
+    100% { transform: rotate(0deg); }
+}
+ 
   .emergency {
     background: #ffd6e0;
     border: 2px solid #ff6b9d;
@@ -211,6 +223,7 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 <!-- MAIN CONTENT -->
 
 <div id="mainContent" style="display:none;">
+<div class="page-container">
 
 <h1>Open Me When</h1>
 
@@ -264,7 +277,7 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 </div>
 
 
-
+</div> 
 </div>
 
 <!-- LETTER PAGES -->
@@ -365,6 +378,30 @@ function unlockSecret() {
         secretClicks = 0; // resets
     }
 }
+function launchConfetti() {
+    for (let i = 0; i < 60; i++) {
+        let confetti = document.createElement("div");
+        confetti.style.position = "fixed";
+        confetti.style.width = "8px";
+        confetti.style.height = "8px";
+        confetti.style.background = ["#ff6b9d", "#ffd6e0", "#e7b6ff"][Math.floor(Math.random()*3)];
+        confetti.style.top = "-10px";
+        confetti.style.left = Math.random() * window.innerWidth + "px";
+        confetti.style.borderRadius = "50%";
+        confetti.style.zIndex = "9999";
+        confetti.style.transition = "transform 3s linear";
+        document.body.appendChild(confetti);
+
+        setTimeout(() => {
+            confetti.style.transform = "translateY(100vh)";
+        }, 10);
+
+        setTimeout(() => {
+            confetti.remove();
+        }, 3000);
+    }
+}
+ 
 
 </script>
 
