--- a/index.htm
+++ b/index.htm
@@ -215,7 +215,8 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 <!-- PASSWORD SCREEN -->
 
 <div id="passwordScreen">
-    <h2>Enter Password</h2>
+    <h2>Enter Password
+    hint: when it all started (dd/mm/yy) </h2>
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button onclick="checkPassword()">Enter</button>
 </div>
