--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,15 @@
  <title>Open Me When</title>
 
 <style>
+ .letter-page {
+    text-align: left;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.letter-page h2 {
+    text-align: center;
+}
 .secret {
     background: #e7b6ff;
     box-shadow: 0 8px 25px rgba(180, 120, 255, 0.4);
