--- a/index.htm
+++ b/index.htm
@@ -201,10 +201,6 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
     pointer-events: none;
 }
 
-/* Flap opens on hover */
-.envelope:hover::before {
-    transform: rotateX(180deg);
-}
 
 .envelope span {
     position: absolute;
@@ -229,7 +225,7 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
 }
 
 .envelope::after {
-    content: "🌷💖🌷"; /* heart-shaped tulip petals vibe */
+    content: "💛"; /* heart-shaped tulip petals vibe */
     position: absolute;
     bottom: 10px;
     left: 50%;
