--- a/index.htm
+++ b/index.htm
@@ -230,20 +230,10 @@ box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
     transform: translate(-50%, -50%); /* center exactly */
     width: 40px;      /* adjust size as you like */
     height: 40px;
-    background: url('https://i.ibb.co/YX0tVqY/heart-tulip.png') no-repeat center/contain; /* your heart tulip image */
+    background: 🎀
     pointer-events: none;  /* so clicks go through */
 }
-.envelope::after {
-    content: "💛"; /* heart-shaped tulip petals vibe */
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 20px;
-    pointer-events: none;
-    z-index: 2;
-    animation: floaty 3s ease-in-out infinite;
-}
+
 .letter-page {
     display: none;
     background: var(--letter-background);
