--- a/index.htm
+++ b/index.htm
@@ -214,7 +214,7 @@ body {
 <div class="envelope-grid">
 
     <!-- ENVELOPES -->
-    <div class="envelope" onclick="triggerEnvelope('miss')">
+    <div class="envelope" onclick="triggerEnvelope(this, 'miss')">
         <span>When you miss me</span>
         <div class="stamp"></div>
 
@@ -222,7 +222,7 @@ body {
 
     </div>
 
-    <div class="envelope" onclick="triggerEnvelope('bad')">
+    <div class="envelope" onclick="triggerEnvelope(this, 'bad')">
         <span>When you have a bad day</span>
         <div class="stamp"></div>
 
@@ -230,7 +230,7 @@ body {
 
     </div>
 
-    <div class="envelope" onclick="triggerEnvelope('mad')">
+    <div class="envelope" onclick="triggerEnvelope(this, ‘mad')">
         <span>When you're mad</span>
         <div class="stamp"></div>
 
@@ -239,7 +239,7 @@ body {
     </div>
 
 
-    <div class="envelope" onclick="triggerEnvelope('sad')">
+    <div class="envelope" onclick="triggerEnvelope(this, 'sad')">
         <span>When you're sad</span>
         <div class="stamp"></div>
 
@@ -247,7 +247,7 @@ body {
 
     </div>
 
-    <div class="envelope" onclick="triggerEnvelope('sleep')">
+    <div class="envelope" onclick="triggerEnvelope(this, ‘sleep')">
         <span>When you can't sleep</span>
         <div class="stamp"></div>
 
@@ -255,7 +255,7 @@ body {
 
     </div>
 
-    <div class="envelope emergency" onclick="triggerEnvelope('emergency')">
+    <div class="envelope emergency" onclick="triggerEnvelope(this, 'emergency')">
         <span>Open in case of emotional emergency</span>
         <div class="stamp"></div>
 
@@ -283,7 +283,7 @@ body {
 
 
 
-<script <h2>When You Miss Me</h2>
+<h2>When You Miss Me</h2>
 <p>  If you’re missing me nownownow then that honestly makes my heart ache in the bestest way ever because It means what we have is real enough to be felt when we’re apart. It means I matter to you and that’s means the whole world to me. woaaah i matter to my boyfriend YAYAYAYYAYA AWHHH MY BABYY 
 <br>
 But don’t let missing me turn scary i promise ill be back oky. 😡😡 but baby a teenie weenie reminder that I’m not someone temporary or halfway here. I didn’t choose you by accident, and I’m not staying by coincidence. I chose you because I wanted to. and I will continue choosing you until my very last breath okay☹️☹️
