--- a/index.htm
+++ b/index.htm
@@ -215,63 +215,50 @@ body {
 
     <!-- ENVELOPES -->
 
-    <div class="envelope" onclick="triggerEnvelope(this, 'miss')">
-      <div id="miss" class="letter-page">
-  <span>When you miss me</span>
-        <div class="stamp"></div>
+<div class="envelope-grid">
 
-<div class="flower-burst"></div>
+<div class="envelope" onclick="triggerEnvelope(this, 'miss')">
+    <span>When you miss me</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-    </div>
+<div class="envelope" onclick="triggerEnvelope(this, 'bad')">
+    <span>When you have a bad day</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-    <div class="envelope" onclick="triggerEnvelope(this, 'bad')">
-        <span>When you have a bad day</span>
-        <div class="stamp"></div>
+<div class="envelope" onclick="triggerEnvelope(this, 'mad')">
+    <span>When you're mad</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-<div class="flower-burst"></div>
+<div class="envelope" onclick="triggerEnvelope(this, 'sad')">
+    <span>When you're sad</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-    </div>
+<div class="envelope" onclick="triggerEnvelope(this, 'sleep')">
+    <span>When you can't sleep</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-    <div class="envelope" onclick="triggerEnvelope(this, 'mad')"
-        <span>When you're mad</span>
-        <div class="stamp"></div>
+<div class="envelope emergency" onclick="triggerEnvelope(this, 'emergency')">
+    <span>Open in case of emotional emergency</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-<div class="flower-burst"></div>
+<div class="envelope secret" onclick="unlockSecret()">
+    <span>???</span>
+    <div class="stamp"></div>
+    <div class="flower-burst"></div>
+</div>
 
-    </div>
-
-
-    <div class="envelope" onclick="triggerEnvelope(this, 'sad')">
-        <span>When you're sad</span>
-        <div class="stamp"></div>
-
-<div class="flower-burst"></div>
-
-    </div>
-
-    <div class="envelope" onclick="triggerEnvelope(this, 'sleep')"
-        <span>When you can't sleep</span>
-        <div class="stamp"></div>
-
-<div class="flower-burst"></div>
-
-    </div>
-
-    <div class="envelope emergency" onclick="triggerEnvelope(this, 'emergency')">
-        <span>Open in case of emotional emergency</span>
-        <div class="stamp"></div>
-
-<div class="flower-burst"></div>
-
-    </div>
-
-    <div class="envelope secret" onclick="unlockSecret()">
-        <span>???</span>
-        <div class="stamp"></div>
-
-<div class="flower-burst"></div>
-
-    </div>
 </div>
     <!-- CONSTRUCTION BOX -->
     <div class="construction">
