--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,57 +56,16 @@ body {
    ENVELOPES
 =========================== */
 
-.flower-burst {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    pointer-events: none;
-}
-
-.flower {
-    position: absolute;
-    width: 35px;
-    height: 35px;
-background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Pink_rose_icon.svg/512px-Pink_rose_icon.svg.png') no-repeat center/contain;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0.5);
-    animation: flowerPop 1s ease forwards;
-    filter: hue-rotate(320deg) saturate(1.4); /* makes them pinkish */
-}
-
-@keyframes flowerPop {
-    0% {
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(0.5);
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: translate(calc(-50% + var(--x)), calc(-50% + var(--y))) scale(1);
-    }
-}
-
 .envelope {
     position: relative;
-    width: 180px;
-    height: 180px;
+    width: 320px;
+    height: 120px;
+    margin: 45px auto;
     background: #f8c8dc;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s ease;
     box-shadow: 0 8px 20px rgba(244, 169, 199, 0.4);
-}
-
-.envelope-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-    justify-items: center;
-    margin-top: 50px;
 }
 
 .envelope:hover {
@@ -118,7 +78,7 @@ background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Pink_
     top: 0;
     left: 0;
     width: 100%;
-    height: 90px;
+    height: 70px;
     background: linear-gradient(135deg, #f4a9c7, #ffb6d5);
     clip-path: polygon(0 0, 50% 100%, 100% 0);
     transition: transform 0.5s ease;
@@ -155,7 +115,7 @@ background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Pink_
     transform: translate(-50%, -50%); /* centers in envelope */
     width: 50px;      /* adjust size if needed */
     height: 50px;
-background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Pink_rose_icon.svg/512px-Pink_rose_icon.svg.png') no-repeat center/contain;
+    background: url('https://i.ibb.co/YX0tVqY/heart-tulip.png') no-repeat center/contain; 
     pointer-events: none;
 }
 
@@ -210,75 +170,54 @@ background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Pink_
 <div id="mainContent" style="display:none;">
     <h1>Open Me When</h1>
 
-
-<div class="envelope-grid">
-
     <!-- ENVELOPES -->
+    <div class="envelope" onclick="openLetter('miss')">
+        <span>When you miss me</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope-grid">
+    <div class="envelope" onclick="openLetter('bad')">
+        <span>When you have a bad day</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope" onclick="triggerEnvelope(this, 'miss')">
-    <span>When you miss me</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
+    <div class="envelope" onclick="openLetter('mad')">
+        <span>When you're mad</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope" onclick="triggerEnvelope(this, 'bad')">
-    <span>When you have a bad day</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
+    <div class="envelope" onclick="openLetter('sad')">
+        <span>When you're sad</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope" onclick="triggerEnvelope(this, 'mad')">
-    <span>When you're mad</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
+    <div class="envelope" onclick="openLetter('sleep')">
+        <span>When you can't sleep</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope" onclick="triggerEnvelope(this, 'sad')">
-    <span>When you're sad</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
+    <div class="envelope emergency" onclick="openLetter('emergency')">
+        <span>Open in case of emotional emergency</span>
+        <div class="stamp"></div>
+    </div>
 
-<div class="envelope" onclick="triggerEnvelope(this, 'sleep')">
-    <span>When you can't sleep</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
-
-<div class="envelope emergency" onclick="triggerEnvelope(this, 'emergency')">
-    <span>Open in case of emotional emergency</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
-
-<div class="envelope secret" onclick="unlockSecret()">
-    <span>???</span>
-    <div class="stamp"></div>
-    <div class="flower-burst"></div>
-</div>
+    <div class="envelope secret" onclick="unlockSecret()">
+        <span>???</span>
+        <div class="stamp"></div>
+    </div>
 
     <!-- CONSTRUCTION BOX -->
- <div class="envelope">
-    <span>Coming Soon</span>
-    <div style="
-        position:absolute;
-        bottom:20px;
-        left:50%;
-        transform:translateX(-50%);
-        font-size:14px;
-        color:#d45b8c;
-        width:140px;
-    ">
-        💌OOPS!!More letters next month 💌
+    <div class="construction">
+        <div class="cute-box">
+            <h3>💌 Coming Soon 💌</h3>
+            <p> OOPS! more letters unlocking next month...</p>
+            <div class="sparkles">🌷🌷🌷</div>
+        </div>
     </div>
 </div>
-           
 
-<div id="miss" class="letter-page">
 
-<h2>When You Miss Me</h2>
+ <h2>When You Miss Me</h2>
 <p>  If you’re missing me nownownow then that honestly makes my heart ache in the bestest way ever because It means what we have is real enough to be felt when we’re apart. It means I matter to you and that’s means the whole world to me. woaaah i matter to my boyfriend YAYAYAYYAYA AWHHH MY BABYY 
 <br>
 But don’t let missing me turn scary i promise ill be back oky. 😡😡 but baby a teenie weenie reminder that I’m not someone temporary or halfway here. I didn’t choose you by accident, and I’m not staying by coincidence. I chose you because I wanted to. and I will continue choosing you until my very last breath okay☹️☹️
@@ -376,28 +315,18 @@ function checkPassword() {
     if (password === "010126") {
         document.getElementById("passwordScreen").style.display = "none";
         document.getElementById("mainContent").style.display = "block";
-      } else {
-}  // ← ADD THIS LINE
+    } else {
         wrongAttempts++;
         if (wrongAttempts === 1) alert("Wrong password 💌");
         else if (wrongAttempts === 2) alert("Hint: it’s a speciaaal date…");
         else alert("It’s the day everything started 🤍");
     }
+}
+
 function openLetter(id) {
-    const letter = document.getElementById(id);
-
-    if (!letter) return;
-
-    document.querySelectorAll(".letter-page").forEach(page => {
-        page.style.display = "none";
-    });
-
+    if(id === "emergency") document.getElementById("dimBg").style.display = "block";
     document.getElementById("mainContent").style.display = "none";
-    letter.style.display = "block";
-
-    if(id === "emergency") {
-        document.getElementById("dimBg").style.display = "block";
-    }
+    document.getElementById(id).style.display = "block";
 }
 
 function goBack() {
@@ -412,40 +341,6 @@ function unlockSecret() {
     if (secretClicks < 3) alert("Nothing here yet...");
     else { openLetter("secret"); secretClicks = 0; }
 }
-
-function burstFlowers(envelope) {
-    const container = envelope.querySelector(".flower-burst");
-
-    for (let i = 0; i < 8; i++) {
-        const flower = document.createElement("div");
-        flower.classList.add("flower");
-
-   const angle = Math.random() * 2 * Math.PI;
-        const radius = 80 + Math.random() * 40;
-
-        const x = Math.cos(angle) * radius + "px";
-        const y = Math.sin(angle) * radius + "px";
-
-        flower.style.setProperty("--x", x);
-        flower.style.setProperty("--y", y);
-
-        container.appendChild(flower);
-
-        setTimeout(() => {
-            flower.remove();
-        }, 1000);
-    }
-}
-
-function triggerEnvelope(el, id) {
-    burstFlowers(el);
-
-    setTimeout(() => {
-        openLetter(id);
-    }, 600);
-}
-
 </script>
 </body>
 </html>
-
