--- a/index.htm
+++ b/index.htm
@@ -171,6 +171,8 @@ body {
     <h1>Open Me When</h1>
 
     <!-- ENVELOPES -->
+  <!-- ENVELOPES GRID -->
+<div class="envelope-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; justify-items: center; margin-top: 40px;">
     <div class="envelope" onclick="openLetter('miss')">
         <span>When you miss me</span>
         <div class="stamp"></div>
@@ -205,14 +207,14 @@ body {
         <span>???</span>
         <div class="stamp"></div>
     </div>
+</div>
 
-    <!-- CONSTRUCTION BOX -->
-    <div class="construction">
-        <div class="cute-box">
-            <h3>💌 Coming Soon 💌</h3>
-            <p> OOPS! more letters unlocking next month...</p>
-            <div class="sparkles">🌷🌷🌷</div>
-        </div>
+<!-- CONSTRUCTION BOX -->
+<div class="construction">
+    <div class="cute-box">
+        <h3>💌 Coming Soon 💌</h3>
+        <p>OOPS! more letters unlocking next month...</p>
+        <div class="sparkles">🌷🌷🌷</div>
     </div>
 </div>
 
