--- a/index.htm
+++ b/index.htm
@@ -111,7 +111,7 @@ body {
     transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
-    background: url('https://i.ibb.co/YX0tVqY/heart-tulip.png') no-repeat center/contain; 
+    background: 🎀
     pointer-events: none;
 }
 
