--- a/index.htm
+++ b/index.htm
@@ -109,9 +109,7 @@ body {
     top: 50%;         
     left: 50%;        
     transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    background: 🎀
+    font-size: 40px;  /* adjust size as needed */
     pointer-events: none;
 }
 
@@ -170,37 +168,37 @@ body {
     <div class="envelope-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; justify-items: center; margin-top: 40px;">
         <div class="envelope" onclick="openLetter('miss')">
             <span>When you miss me</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope" onclick="openLetter('bad')">
             <span>When you have a bad day</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope" onclick="openLetter('mad')">
             <span>When you're mad</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope" onclick="openLetter('sad')">
             <span>When you're sad</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope" onclick="openLetter('sleep')">
             <span>When you can't sleep</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope emergency" onclick="openLetter('emergency')">
             <span>Open in case of emotional emergency</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
 
         <div class="envelope secret" onclick="unlockSecret()">
             <span>???</span>
-            <div class="stamp"></div>
+            <div class="stamp">🎀</div>
         </div>
     </div>
 
