--- a/index.htm
+++ b/index.htm
@@ -199,7 +199,11 @@ body {
 
     <!-- ENVELOPES GRID -->
     <div class="envelope-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; justify-items: center; margin-top: 40px;">
-        <div class="envelope" onclick="openLetter('miss')">
+       <div class="envelope" onclick="openLetter('2month')">
+    <span>Our 2 Monthaversary! 🎉</span>
+    <div class="stamp"></div>
+</div>
+       <div class="envelope" onclick="openLetter('miss')">
             <span>When you miss me</span>
             <div class="stamp">🎀</div>
         </div>
@@ -246,6 +250,16 @@ body {
 </div>
 
 <!-- LETTER PAGES -->
+   <div id="2month" class="letter-page">
+<h2>Our 2 Monthaversary! 🎉</h2>
+<p>
+Hi my baby 💖, I can’t believe it’s already been 2 months! Every moment with you has been pure magic.  
+Thank you for being you, for making me laugh, for caring, and for loving me.  
+I’m so excited for everything we’ll share in the future. Here’s to many more months together!  
+I love you so much, always and forever. 🥰
+</p>
+<button class="back-btn" onclick="goBack()">Close</button>
+</div> 
 <div id="miss" class="letter-page">
     <h2>When You Miss Me</h2>
    <p>  If you’re missing me nownownow then that honestly makes my heart ache in the bestest way ever because It means what we have is real enough to be felt when we’re apart. It means I matter to you and that’s means the whole world to me. woaaah i matter to my boyfriend YAYAYAYYAYA AWHHH MY BABYY 
